Fix junits